<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_finish"
        android:title="@string/finish"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom"/>


</menu>